--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -26,7 +26,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
       api:
-        image: mariadb:lts
+        image: ghcr.io/danielramosacosta/nestjs-realworld-example-app:latest
         env:
           DB_HOST: db
           DB_PORT: 3306
