--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -20,6 +20,11 @@ jobs:
           MARIADB_DATABASE: conduit
         ports:
           - 3306:3306
+        options: >-
+          --health-cmd "mysqladmin ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
       api:
         image: ghcr.io/danielramosacosta/nestjs-realworld-example-app:latest
         env:
